--- a/assets/translation/ru.json
+++ b/assets/translation/ru.json
@@ -5,6 +5,14 @@
   "Night/Day mode":"Режим Ночь/День",
   "Exit":"Выход",
   "Profile Information": "Информация о профиле",
-  "My events":"Мои события"
+  "My events":"Мои события",
+  "Search for events...":"Поиск событий..."
+  ,"Main page":"Главная страница",
+  "My events":"Мои мероприятия",
+  "Main":"Основной",
+  "Recently":"Недавно",
+  "Participated":"Принимала участие",
+  "cancelled":"отменено",
+  "Language Exchange":"Языковой обмен"
  
   }
