--- a/assets/translation/uz.json
+++ b/assets/translation/uz.json
@@ -5,5 +5,13 @@
   "Night/Day mode":"Tungi/Kunduzgi holat",
   "Exit":"Chiqish",
   "Profile Information":"Profil Ma'lumotlari",
-  "My events":"Mening tadbirlarim"
+  "My events":"Mening tadbirlarim",
+  "Search for events...":"Tadbirlarni izlash...",
+  "Main page":"Bosh Sahifa",
+  "My events":"Mening tadbirlarim",
+  "Main":"Asosiy",
+  "Recently":"Yaqinda",
+  "Participated":"Ishtirok Etgan",
+  "cancelled":"Bekor Qilingan",
+  "Language Exchange":"Til Almashtirish"
 }
