--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -5,7 +5,15 @@
     "Night/Day mode":"Night/Day mode",
     "Exit":"Exit",
     "Profile Information":"Profile Information",
-    "My events":"My events"
+    "My events":"My events",
+    "Search for events...":"Search for events...",
+    "Main page":"Main page",
+    "My events":"My events",
+    "Main":"Main",
+    "Recently":"Recently",
+    "Participated":"Participated",
+    "cancelled":"cancelled",
+    "Language Exchange":"Language Exchange"
     
   }
   
